# vibathon-ai-paris-trendmine

./: LICENSE
script-generation/: .gitignore  ENV_SETUP.md  GENERATE_SCRIPTS_GUIDE.md  QUICK_REFERENCE.md  __init__.py  batch_generator.py  config.yaml  demo_generate_scripts.sh  example.py  generate_scripts.py  main.py  pyproject.toml  requirements.txt  setup.py  templates.py  test_setup.py  topic_manager.py  video_idea_generator.py
script-generation/docs/: AI_PROVIDERS.md  MIGRATION_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  START_HERE.md  USAGE_EXAMPLES.md
script-generation/generated_scripts/: README_SCRIPTS.md  scripts_nvidia_new_20251115_125402.json  scripts_nvidia_new_20251115_125402.txt  scripts_nvidia_new_gpu_20251115_130052.json  scripts_nvidia_new_gpu_20251115_130052.txt  scripts_nvidia_new_gpu_20251115_132033.json  scripts_nvidia_new_gpu_20251115_132033.txt  scripts_nvidia_new_gpu_20251115_132643.json  scripts_nvidia_new_gpu_20251115_132643.txt  scripts_nvidia_new_gpu_20251115_141526.json  scripts_nvidia_new_gpu_20251115_141526.txt  scripts_nvidia_new_gpu_20251115_141824.json  scripts_nvidia_new_gpu_20251115_141824.txt  scripts_nvidia_new_gpu_20251115_142902.json  scripts_nvidia_new_gpu_20251115_142902.txt  scripts_nvidia_new_gpu_20251115_143800.json  scripts_nvidia_new_gpu_20251115_143800.txt  scripts_nvidia_new_gpu_20251115_143800_system_prompt.txt  scripts_nvidia_new_gpu_20251115_144008.json  scripts_nvidia_new_gpu_20251115_144008.txt  scripts_nvidia_new_gpu_20251115_144354.json  scripts_nvidia_new_gpu_20251115_144354.txt  (+6 more)
(+7 files in other folders)
